--- a/public/styles.css
+++ b/public/styles.css
@@ -1,9 +1,21 @@
-body .Input {
+body .input {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
 }
 
-.Input {
+.input {
   text-align: center;
+}
+
+.nav {
+  display: flex;
+}
+
+.nav li {
+  margin-right: 15px;
+}
+
+.active {
+  font-weight: bold;
 }
